<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tolls="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/globalBackground"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/ga_wait_gif"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:background="@drawable/gifmaker"
            android:gravity="center" />

        <TextView
            android:id="@+id/ga_text_impact_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/shaking_wait"
            android:textSize="38sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ga_count_best_user_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_best_score"
            android:gravity="center"
            android:textSize="50sp" />

        <info.hoang8f.widget.FButton
            android:id="@+id/ga_user_ready_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/to_measure_btn" />

    </LinearLayout>

</RelativeLayout>